--- a/apps/tictactoe/src/app/components/board/board.component.html
+++ b/apps/tictactoe/src/app/components/board/board.component.html
@@ -1,1 +1,17 @@
-<p>board works!</p>
+<h1>Current Player: {{ player }} </h1>
+
+<button (click)="newGame()">Start new Game</button>
+
+<h2 *ngIf="winner && winner !== '-'">
+  Player {{ winner }} won the game!
+</h2>
+<h2 *ngIf="winner && winner === '-'">
+  Tie!
+</h2>
+
+<main>
+  <angular-square *ngFor="let val of squares; let i = index"
+                  [value]="val"
+                  (click)="makeMove(i)">>
+  </angular-square>
+</main>
