--- a/apps/tictactoe/src/app/views/results/results.component.html
+++ b/apps/tictactoe/src/app/views/results/results.component.html
@@ -1,7 +1,7 @@
 <a class="button" routerLink="">Index</a>
 <br>
 <angular-boards-table
-  (messageEvent)="recieveMessage($event)"
+  (messageEvent)="receiveMessage($event)"
 ></angular-boards-table>
 <angular-board
   *ngIf="activeIndex >= 0"
