--- a/apps/tictactoe/src/app/components/boards-table/boards-table.component.html
+++ b/apps/tictactoe/src/app/components/boards-table/boards-table.component.html
@@ -18,6 +18,12 @@
       <td mat-cell *matCellDef="let row">{{row.board}}</td>
     </ng-container>
 
+    <!-- Delete Column -->
+    <ng-container matColumnDef="delete">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Delete</th>
+      <td mat-cell *matCellDef="let row"><button (click)="onDeleteClick(row)"></button></td>
+    </ng-container>
+
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr class="row "mat-row *matRowDef="let row; columns: displayedColumns;" (click)="onClick(row)"></tr>
   </table>
